# idpicker

./: .env.example  .gitignore  README.md  compose.yaml
.github/workflows/: nextjs.yml
ai-backend/: .dockerignore  .env.example  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
ai-backend/api/models/: report.py
ai-backend/api/routes/: career_recommendations.py  character_analysis.py  generate.py  report.py
ai-backend/api/schema/: career_recommendations.py  character_analysis.py  generate.py
ai-backend/api/services/: generate.py
backend/: .dockerignore  .env.example  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/src/: server.js  server.ts
backend/src/config/: env.ts  envConfig.js
backend/src/controllers/: aiController.js  aiController.ts  authController.js  authController.ts
backend/src/decorators/: routeDecorators.ts
backend/src/routes/: aiRoutes.js  aiRoutes.ts  authRoutes.ts
backend/src/services/: aiService.js  aiServices.ts
backend/src/types/: RouteMetadata.ts  routeTypes.ts
backend/src/utils/: RouteController.ts  ai.js  aiUtils.js  aiUtils.ts  metadata.ts  metadataKeys.ts
student-module-frontend/: .eslintrc.js  .gitignore  i18n.config.js  i18n.config.ts  next-i18next.config.js  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
student-module-frontend/.github/workflows/: ci.yml  deploy.yml
student-module-frontend/src/: i18n.config.ts  i18n.ts  middleware.ts  navigation.ts
student-module-frontend/src/app/: globals.css  layout.tsx  page.tsx
(+46 files in other folders)
